--- a/_var.scss
+++ b/_var.scss
@@ -1,5 +1,5 @@
 $bracket-color: #8b37ff;
 $icon-color: #d4d4d5;
-$nav-backColor: #f5f5f5;
+$nav-backColor: #e2e2e2;
 $white: #FFFFFF;
 $black: #000000;
