styling is done just need to get the sizing and spacing done

--- a/style.scss
+++ b/style.scss
@@ -8,6 +8,7 @@ body {
 .mainContent {
     background-image: url('/images/computer.jpeg');
     width: 100%;
+    height: 100%;
     background-repeat: no-repeat;
     background-size: cover;
 }
@@ -31,6 +32,9 @@ body {
 .startBtn {
     color: $white;
     background-color: $bracket-color;
+    border: 1px solid $bracket-color;
+    border-radius: 20px;
+    padding: 7px 1rem;
 }
 
 .icon {
@@ -42,6 +46,17 @@ body {
 }
 
 .nav-footer {
+    text-align: center;
     background-color: $nav-backColor;
     padding: 1rem;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+
+    a {
+        color: $black;
+        text-decoration: none; 
+    }
+
 }
