--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ body {
 .mainContent {
   background-image: url("/images/computer.jpeg");
   width: 100%;
+  height: 100%;
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -29,6 +30,9 @@ body {
 .startBtn {
   color: #FFFFFF;
   background-color: #8b37ff;
+  border: 1px solid #8b37ff;
+  border-radius: 20px;
+  padding: 7px 1rem;
 }
 
 .icon {
@@ -40,6 +44,15 @@ body {
 }
 
 .nav-footer {
+  text-align: center;
   background-color: #e2e2e2;
   padding: 1rem;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+}
+.nav-footer a {
+  color: #000000;
+  text-decoration: none;
 }/*# sourceMappingURL=style.css.map */
