finished the project

--- a/style.css
+++ b/style.css
@@ -13,10 +13,12 @@ body {
 
 .promote {
   color: #FFFFFF;
+  font-size: 2.5vh;
 }
 
 .title {
   color: #FFFFFF;
+  font-size: 6vh;
 }
 
 .symbol {
@@ -25,9 +27,11 @@ body {
 
 .title-discription {
   color: #FFFFFF;
+  font-size: 3.5vh;
 }
 
 .startBtn {
+  font-size: 1.5vh;
   color: #FFFFFF;
   background-color: #8b37ff;
   border: 1px solid #8b37ff;
@@ -37,9 +41,11 @@ body {
 
 .icon {
   color: #d4d4d5;
+  font-size: 1.7vh;
 }
 
 .icon-discription {
+  font-size: 1.8vh;
   color: #FFFFFF;
 }
 
