--- a/style.scss
+++ b/style.scss
@@ -15,10 +15,12 @@ body {
 
 .promote{
     color: $white;
+    font-size: 2.5vh;
 }
 
 .title {
     color: $white;
+    font-size: 6vh;
 }
 
 .symbol {
@@ -27,9 +29,11 @@ body {
 
 .title-discription {
     color: $white;
+    font-size: 3.5vh;
 }
 
 .startBtn {
+    font-size: 1.5vh;
     color: $white;
     background-color: $bracket-color;
     border: 1px solid $bracket-color;
@@ -39,9 +43,11 @@ body {
 
 .icon {
     color: $icon-color;
+    font-size: 1.7vh;
 }
 
 .icon-discription {
+    font-size: 1.8vh;
     color: $white;
 }
 
